--- a/css/main.css
+++ b/css/main.css
@@ -155,7 +155,7 @@ h1, h2{
   position: absolute;
   bottom: 0;
   width: 100vw;
-  height: 80px;
+  height: 129px;
   background-color: #fff;
   border-top: 1px solid #4d4d4d;
   text-align: center;
